...
        unselectedIcon = Icons.Outlined.History,
        label = "History",
    ),
    WORKOUT(
        selectedIcon = Icons.Filled.FitnessCenter,
        unselectedIcon = Icons.Outlined.FitnessCenter,
        label = "Workout",
    ),
    EXERCISES(
        selectedIcon = Icons.AutoMirrored.Filled.List,
        unselectedIcon = Icons.AutoMirrored.Outlined.List,
        label = "Exercises",
    ),
...
